# moodle_quiz

./: .gitignore  aiken.py  config.py  data.txt  data.xml  db_schema.sql  dev.py  gift.py  gift2dict.py  google_auth_bp.py  moodle_quiz.py  moodle_xml.py  notes.txt  prima_prova_selezione_domande.py  prima_prova_selezione_domande_modified.py  pyproject.toml  quiz.py  quiz.sqlite  quiz.sqlite-shm  quiz.sqlite-wal  quizzych.py  translations_it.txt  zoo_app_xml_light.py  zoo_app_xml_light.py.old
templates/: admin.html  admin_login.html  all_images.html  all_questions.html  bookmarked_questions.html  brush_up.html  click_image.html  click_image_resize2.html  course_management.html  course_name.html  display_lives.html  edit_question.html  feedback.html  header.html  home.html  load_questions.html  login.html  main_home.html  my_quizz.html  new_course.html  new_nickname.html  parameters.html  popup.css  popup.html  question.html  recover_lives.html  results.html  results_by_topic.html  saved_questions.html  settings.html  steps.html  test_popup.html  test_popup2.html  topic.html  topic_list.html
