[project]
name = "moodle-quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "hypercorn>=0.17.3",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pygiftparserrgmf>=0.0.5",
    "rapidfuzz>=3.11.0",
    "sqlalchemy>=2.0.41",
]
